src/objects/Resultado_Prevalidador__c.object
<CustomObject>
    <fields>
        <fullName>Cifin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cifin</label>
        <referenceTo>Cifin__c</referenceTo>
        <relationshipLabel>Resultados Prevalidador</relationshipLabel>
        <relationshipName>Resultados_Prevalidador</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Resultados Prevalidador</relationshipLabel>
        <relationshipName>Resultados_Prevalidador</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Datacredito__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Datacredito</label>
        <referenceTo>Datacredito__c</referenceTo>
        <relationshipLabel>Resultados Prevalidador</relationshipLabel>
        <relationshipName>Resultados_Prevalidador</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Endeudamiento_financiero_prevalidado__c</fullName>
        <label>Endeudamiento financiero prevalidado</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fecha_de_prevalidacion__c</fullName>
        <label>Fecha de prevalidación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_hora_consulta_en_listas__c</fullName>
        <label>Fecha/hora consulta en listas</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LTV_Prevalidado__c</fullName>
        <label>LTV Prevalidado</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LogRespuesta__c</fullName>
        <label>LogRespuesta</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Log_Error__c</fullName>
        <label>Log Error</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Monto_sugerido_preaprobado__c</fullName>
        <label>Monto sugerido preaprobado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Moras_en_CIFIN__c</fullName>
        <label>Moras en CIFIN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Moras_en_Datacredito__c</fullName>
        <label>Moras en Datacredito</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Consulta__c</fullName>
        <label>No. Consulta</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_de_creditos_vigentes__c</fullName>
        <label>No. de créditos vigentes</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_de_tarjetas_vigentes__c</fullName>
        <label>No. de tarjetas vigentes</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_consultas__c</fullName>
        <label>Número de consultas</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Observaciones__c</fullName>
        <label>Observaciones</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Oportunidad__c</fullName>
        <label>Oportunidad</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Resultados Prevalidador</relationshipLabel>
        <relationshipName>Resultados_Prevalidador</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PDFs_Generados__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PDFs Generados</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plazo__c</fullName>
        <label>Plazo</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Presenta_cliente_paz_y_salvo__c</fullName>
        <description>Campo habilitado para cada gerente, donde marcan si el cliente presento los paz y salvos respectivos para poder realizar la consulta en CIFIN y el asesor comercial pueda realizar la solicitud de crédito</description>
        <inlineHelpText>Marcar este campo, si el cliente presento el paz y salvo cuando el resultado del prevalidador es NO VIABLE, para poder realizar la solicitud de crédito, y permita continuar con el proceso.</inlineHelpText>
        <label>Presenta cliente paz y salvo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relacion_cuota_ingreso_prevalidado__c</fullName>
        <label>Relación cuota ingreso prevalidado</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Resultado_del_Prevalidador__c</fullName>
        <label>Resultado del Prevalidador</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Data__c</fullName>
        <formula>Datacredito__r.Puntaje__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score de Data</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_de_Data__c</fullName>
        <label>Score de Data</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_interno__c</fullName>
        <label>Score interno</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tipo_Cliente__c</fullName>
        <label>Tipo Cliente</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deudor</fullName>
                </value>
                <value>
                    <fullName>Codeudor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Resultado Prevalidador</label>
    <nameField>
        <displayFormat>RP-{000000}</displayFormat>
        <label>Id Resultado Prevalidador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resultados Prevalidador</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>RP01_Valida_si_presenta_paz_y_salvo</fullName>
        <active>true</active>
        <errorConditionFormula>AND(

Observaciones__c  &lt;&gt;  &quot;El cliente no cumple con políticas de endeudamiento financiero&quot;,
OR(
ISPICKVAL(Presenta_cliente_paz_y_salvo__c , &quot;Si&quot;)
))</errorConditionFormula>
        <errorMessage>RP01- El paz y salvo solo se presenta cuando el cliente no cumple políticas de endeudamiento fiananciero.</errorMessage>
    </validationRules>
</CustomObject>